[package]
name = "xc"
version = "0.1.0"
edition = "2021"
authors = ["liql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
clap = "~2.32"
clap_complete = "3.0.1"
time = "0.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
toml = "0.5.7"
serde_derive = "*"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
colored = "2"
# tabled = "0.3.0"
tabled = { version = "*", features = ["color"] }
indicatif = "*"