[package]
name = "xc"
version = "2.0.0"
edition = "2021"
authors = ["liql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
clap = "~2.32"
# clap_complete = "3.0.1"
time = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5.7"
futures = "0.3"
colored = "2"
tabled = { version = "0.4", features = ["color"] }
# indicatif = "0.1"
